--- a/.azuredevops/build-test-package_ubuntu.yml
+++ b/.azuredevops/build-test-package_ubuntu.yml
@@ -7,6 +7,12 @@ pool:
   vmImage: 'ubuntu-latest'
   demands: npm
 
+parameters:
+- name: useCache
+  displayName: 'Use cache for npm?'
+  type: boolean
+  default: true
+
 variables:
   buildnumber: $(Build.BuildNumber)
   PublisherID: 'epinova-sweden'
@@ -34,6 +40,8 @@ steps:
       filePath: '$(System.DefaultWorkingDirectory)/BuildScripts/CopyScripts.ps1'
 
   - template: build-node-tasks_ubuntu.yml
+    parameters:
+      useCache: ${{ parameters.useCache }}
 
   - task: PowerShell@2
     displayName: 'Rename tasks to -TEST'
