--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,6 @@
   "author": "Ove Lartelius",
   "license": "MIT",
   "dependencies": {
-    "azure-devops-extension-sdk": "4.0.2"
+    "vss-web-extension-sdk": "^5.141.0"
   }
 }
