--- a/.azuredevops/build-package_ubuntu.yml
+++ b/.azuredevops/build-package_ubuntu.yml
@@ -1,8 +1,8 @@
-trigger:
-  batch: true
-  branches:
-    include:
-    - refs/heads/master
+# trigger:
+#   batch: true
+#   branches:
+#     include:
+#     - refs/heads/master
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 
