--- a/.github/workflows/test-extension-build-validate.yml
+++ b/.github/workflows/test-extension-build-validate.yml
@@ -1,6 +1,11 @@
-name: Build and publish Azure DevOps extension
+name: Build and validate Azure DevOps extension - TEST
 
 on:
+  push:
+    branches:
+      - develop
+      - feature/**
+  pull_request:
   workflow_dispatch: # Allow manuel trigger of the workflow
 
 jobs:
@@ -101,6 +106,11 @@ jobs:
         working-directory: ./src/SmokeTestIfFailReset/SmokeTestIfFailResetV2
         # END TASKS
 
+      - name: Rename tasks to TEST
+        shell: pwsh
+        run: |
+          ./BuildScripts/RenameTasksToTest.ps1
+
       - name: npm install
         run: npm install
         working-directory: ./src
@@ -109,36 +119,11 @@ jobs:
         run: npm install -g tfx-cli@0.18.0
 
       - name: Set extension filename variable
-        run: echo "VsixFileName=epinova-dxp-deployment-extension-$EXTENSION_VERSION.vsix" >> $GITHUB_ENV
+        run: echo "VsixFileName=epinova-dxp-deploy-extension-test-$EXTENSION_VERSION.vsix" >> $GITHUB_ENV
 
       - name: Show VsixFileName
         run: echo "The value of VsixFileName is $VsixFileName"
 
       - name: Package Extension
-        run: tfx extension create --root "src" --manifests "vss-extension.json" --outputPath $VsixFileName --json
+        run: tfx extension isvalid --root "src" --manifests "vss-extension.json" --outputPath $VsixFileName --json
 
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-without-markdown
-          path: |
-            $VsixFileName
-            
-      # - name: tfx extension publish help
-      #   run: tfx extension publish --help
-
-      - name: Publish Extension to Visual Studio Marketplace
-        env:
-          PUBLISHER_ID: ${{ secrets.EPINOVA_VS_MARKETPLACE_PUBLISHER_ID }}
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.EPINOVA_VS_MARKETPLACE_PAT }}
-        run: |
-          tfx extension publish \
-            --publisher $PUBLISHER_ID \
-            --service-url https://marketplace.visualstudio.com \
-            --vsix $VsixFileName \
-            --token $PERSONAL_ACCESS_TOKEN
-
-      - name: Create Git Tag
-        run: |
-          git tag "v${VERSION}"
-          git push origin "v${VERSION}"
