--- a/.github/workflows/PsModule-Build-and-publish.yml
+++ b/.github/workflows/PsModule-Build-and-publish.yml
@@ -31,11 +31,11 @@ jobs:
         shell: pwsh
         run: |
           $ApiKey = "${{ secrets.POWERSHELL_GALLERY_API_KEY }}"
-          Publish-Module -Path "Modules/EpinovaAzureToolBucket" -NuGetApiKey $ApiKey
+          Publish-Module -Path "Modules/EpinovaDxpToolBucket" -NuGetApiKey $ApiKey
         env:
           POWERSHELL_GALLERY_API_KEY: ${{ secrets.POWERSHELL_GALLERY_API_KEY }}
 
       - name: Create Git Tag
         run: |
-          git tag "EpinovaDxpToolBucketv${MODULE_VERSION}"
-          git push origin "EpinovaDxpToolBucketv${MODULE_VERSION}"
+          git tag "EpinovaDxpToolBucket-v${MODULE_VERSION}"
+          git push origin "EpinovaDxpToolBucket-v${MODULE_VERSION}"
