--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -1,4 +1,4 @@
-name: Build and publish Azure DevOps extension
+name: Test scripts
 
 on:
   workflow_dispatch: # Allow manuel trigger of the workflow
@@ -22,6 +22,40 @@ jobs:
           Write-Host "Try to set EXTENSION_VERSION to $extVersion"
           Add-Content -Path $env:GITHUB_ENV -Value "EXTENSION_VERSION=$extVersion"
 
+      - name: Show VERSION/EXTENSION_VERSION
+        run: 
+          echo "VERSION=$VERSION"
+          echo "EXTENSION_VERSION=$EXTENSION_VERSION"
+
+      - name: Copy EpinovaDxpDeploymentUtil to tasks
+        shell: pwsh
+        run: |
+          Write-Host "---Start---"
+          $script = (Get-Item -Path Modules/EpinovaDxpDeploymentUtil.ps1).FullName
+          Write-Host $script
+          $srcRootPath = (Get-Item .\* | Where-Object {$_.FullName.EndsWith("src")})
+          $dir = Get-ChildItem -Path $srcRootPath -Directory
+          foreach ($d in $dir){
+              $psmodulesPath = Join-Path -Path $d.FullName -ChildPath "ps_modules"
+              $filePath = $d.FullName
+              if (Test-Path $psmodulesPath){
+                  Write-Host "Copy script to $filePath"
+                  Copy-Item -Path $script -Destination $filePath -Recurse -Force
+              }
+              else {
+                  # Handle if we have directories for versions.
+                  $subdir = Get-ChildItem -Path $d.FullName -Directory
+                  foreach ($sd in $subdir){
+                      $subfilePath = Join-Path -Path $sd.FullName -ChildPath "ps_modules"
+                      if (Test-Path $subfilePath){
+                          Write-Host $subfilePath
+                          Copy-Item -Path $script -Destination $subfilePath -Recurse -Force
+                      }
+                  }        
+              }
+          }
+          Write-Host "---End---"
+    
       - name: Copy scripts
         shell: pwsh
         run: |
@@ -101,44 +135,24 @@ jobs:
         working-directory: ./src/SmokeTestIfFailReset/SmokeTestIfFailResetV2
         # END TASKS
 
-      - name: npm install
-        run: npm install
-        working-directory: ./src
-
-      - name: Install tfx-cli
-        run: npm install -g tfx-cli@0.18.0
-
-      - name: Set extension filename variable
-        run: echo "VsixFileName=epinova-dxp-deployment-extension-$EXTENSION_VERSION.vsix" >> $GITHUB_ENV
-
-      - name: Show VsixFileName
-        run: echo "The value of VsixFileName is $VsixFileName"
-
-      - name: Package Extension
-        run: tfx extension create --root "src" --manifests "vss-extension.json" --outputPath $VsixFileName --json
-
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-without-markdown
-          path: |
-            $VsixFileName
-            
-      # - name: tfx extension publish help
-      #   run: tfx extension publish --help
-
-      - name: Publish Extension to Visual Studio Marketplace
-        env:
-          PUBLISHER_ID: ${{ secrets.EPINOVA_VS_MARKETPLACE_PUBLISHER_ID }}
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.EPINOVA_VS_MARKETPLACE_PAT }}
+      - name: Rename tasks to TEST
+        shell: pwsh
         run: |
-          tfx extension publish \
-            --publisher $PUBLISHER_ID \
-            --service-url https://marketplace.visualstudio.com \
-            --vsix $VsixFileName \
-            --token $PERSONAL_ACCESS_TOKEN
+          ./BuildScripts/RenameTasksToTest.ps1
 
-      - name: Create Git Tag
-        run: |
-          git tag "v${VERSION}"
-          git push origin "v${VERSION}"
+      # - name: npm install
+      #   run: npm install
+      #   working-directory: ./src
+
+      # - name: Install tfx-cli
+      #   run: npm install -g tfx-cli@0.18.0
+
+      # - name: Set extension filename variable
+      #   run: echo "VsixFileName=epinova-dxp-deploy-extension-test-$EXTENSION_VERSION.vsix" >> $GITHUB_ENV
+
+      # - name: Show VsixFileName
+      #   run: echo "The value of VsixFileName is $VsixFileName"
+
+      # - name: Package Extension
+      #   run: tfx extension isvalid --root "src" --manifests "vss-extension.json" --outputPath $VsixFileName --json
+
