--- a/.github/workflows/test-extension-build-publish.yml
+++ b/.github/workflows/test-extension-build-publish.yml
@@ -1,4 +1,4 @@
-name: Build and publish Azure DevOps extension - TEST
+name: TEST - Publish Azure DevOps extension
 
 on:
   workflow_dispatch: # Allow manuel trigger of the workflow
@@ -131,7 +131,7 @@ jobs:
         env:
           PUBLISHER_ID: ${{ secrets.EPINOVA_VS_MARKETPLACE_PUBLISHER_ID }}
           PERSONAL_ACCESS_TOKEN: ${{ secrets.EPINOVA_VS_MARKETPLACE_PAT }}
-          
+
         run: |
           tfx extension publish \
             --publisher $PUBLISHER_ID \
