--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -1,6 +1,11 @@
 name: Test scripts
 
 on:
+  push:
+    branches:
+      - develop
+      - feature/**
+  pull_request:
   workflow_dispatch: # Allow manuel trigger of the workflow
 
 jobs:
