--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Get extension version
         shell: pwsh
@@ -32,7 +32,7 @@ jobs:
           echo "VERSION=$VERSION"
           echo "EXTENSION_VERSION=$EXTENSION_VERSION"
 
-      - uses: /.github/actions/populate-psmodules-folders
+      - uses: ./.github/actions/populate-psmodules-folders
       # - name: Copy scripts ps_modules folders
       #   shell: pwsh
       #   run: |
